--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 logging.basePath=H:/Repositories/Turf Booking
+
+management.tracing.sampling.probability=1.0
+spring.cloud.openfeign.micrometer.enabled=true
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.endpoint.health.show-details=always
+spring.cloud.openfeign.client.config.default.loggerLevel=full
